Fixed rendering of (+) button on iPhone

--- a/src/main/scss/style/cards.scss
+++ b/src/main/scss/style/cards.scss
@@ -108,11 +108,12 @@ div#homePage {
                             border: 0px;
                             border-radius: 30px;
                             z-index: 5;
+                            padding: 0px 6px;
             
                             // bottom: 0px;
                             font-size: 45pt;
                             color: white;
-                            background-color: #1863a1;
+                            // background-color: #1863a1;
                             box-shadow: 2px 8px 6px 0 rgba(0, 0, 0, 0.2);
                             width: 60px;
                             height: 60px;
@@ -122,7 +123,7 @@ div#homePage {
                             font-size: 36pt;
 							text-align: left;
                             cursor: pointer;             
-                            
+
                             &:hover {
                                 background-color: #114875;
                             }
